pets/kustomize/base/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: pets-app
  labels:
    app: pets-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: pets-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: pets-config
            items:
            - key: pets_config_1.json
              path: pets_config.json
      containers:
        - name: pets
          image: registry.local:5000/micropet/pets:dev
          imagePullPolicy: Always
          ports:
            - name: pets
              containerPort: 9000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/service/
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pets-service
  labels:
    app: pets-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: pets
      port: 9000
  selector:
    app: pets-app
    group: micro-pet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pets-ingress  
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`pets.dev.pet-cluster.demo`)
    kind: Rule
    services:
    - name: pets-service
      port: 9000
